header spacing correction for small and big screen sizes

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -12,9 +12,11 @@
   right: 0;
   margin: 0 auto;
   z-index: 10;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   //   box-shadow: 0px 4px 11px -2px rgb(0 0 0 / 25%);
   @media only screen and (max-width: $desktopSmall) {
-    padding: 1rem;
+    padding: 1.2rem;
   }
 
   .flex-container {
@@ -43,6 +45,9 @@
     // flex: 1;
     column-gap: 1.5rem;
     font-weight: $medium;
+    @media only screen and (max-width: $desktopSmall) {
+      column-gap: 1rem;
+    }
 
     .link {
       cursor: pointer;
